--- a/food-contact.html
+++ b/food-contact.html
@@ -50,7 +50,7 @@
     <div id="wrapper">
         <section id="cta" class="jumbotron text-center">
             <div class="container">
-                <a href="food-index.html"><img src="foodphotos/Papa-Theo-Logo.png" alt="" class="img-fluid"></a>
+                <a href="index.html"><img src="foodphotos/Papa-Theo-Logo.png" alt="" class="img-fluid"></a>
                 <!--<p>Each year we've hosted the Best Food Blog Awards, we're astounded at the depth, variety, creativity, and ingenuity of the food blogs nominated..</p>-->
                 <a href="#" class="btn btn-primary">View Recipes</a>
             </div>
@@ -65,7 +65,7 @@
                     <div class="collapse navbar-collapse justify-content-md-center" id="RecipeListmenu">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="food-index.html">Home</a>
+                                <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="food-category.html">Recipes</a>
@@ -146,7 +146,7 @@
                     <div class="col-lg-8 offset-lg-2">
                         <div class="widget">
                             <div class="footer-text text-center">
-                                <a href="food-index.html"><img src="images/version/food-logo.png" alt="" class="img-fluid"></a>
+                                <a href="index.html"><img src="foodphotos/Papa-Theo-Logo.png" alt="" class="img-fluid"></a>
                                 <p>© 2017 RecipeList Pty Ltd. Trademarks and brands are the property<br>of their respective owners. </p>
                                 <div class="social">
                                     <a href="#" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook"></i></a>              
