updated front page

--- a/index.html
+++ b/index.html
@@ -82,23 +82,66 @@
         <section class="section lb text-muted">
             <div class="slider-container">
                 <div class="slideshow-container">
-                    <div class="mySlides fade">
-                      <img src="foodphotos\Chicken-Pad-Thai.jpg" style="width:100%">
+                    <h2 style="font-size:50px;text-align:center;">Latest Blog</h2>
+                    <div class="mySlides-active">
+                    <a href="food-single.html"><img src="foodphotos\Sauces.jpg" style="width:100%">
+                    <div class="text-box">
+                        <p>The Importance of Sauces</p></a>
                     </div>
-                    <div class="mySlides fade">
-                      <img src="foodphotos\Thai-Red-Curry-Chicken.jpg" style="width:100%">
-                    </div>
-                    <div class="mySlides fade">
-                      <img src="foodphotos\One-Pan-Asian-Chicken-and-Rice.jpg" style="width:100%">
                     </div>
                 </div>
             </div>
-            <br>
-            <div style="text-align:center">
-                <span class="dot"></span> 
-                <span class="dot"></span> 
-                <span class="dot"></span> 
+            <div class="slider-container">
+                <div class="slideshow-container">
+                    <h2 style="font-size:50px;text-align:center;margin-top: 3rem;">Featured Recipes</h2>
+                    <div class="mySlides fade">
+                      <a href="food-single.html"><img src="foodphotos\Chicken-Pad-Thai.jpg" style="width:100%">
+                      <div class="text-box">
+                        <p>Chicken Pad Thai</p></a>
+                      </div>
+                    </div>
+                    <div class="mySlides fade">
+                        <a href="food-single.html"><img src="foodphotos\Thai-Red-Curry-Chicken.jpg" style="width:100%">
+                      <div class="text-box">
+                        <p>Thai Red Chicken Curry</p></a>
+                      </div>
+                    </div>
+                    <div class="mySlides fade">
+                        <a href="food-single.html"><img src="foodphotos\One-Pan-Asian-Chicken-and-Rice.jpg" style="width:100%">
+                      <div class="text-box">
+                        <p>One Pan Asian Chicken and Rice</p></a>
+                      </div>
+                    </div>
+                    <div class="mySlides fade">
+                        <a href="food-single.html"><img src="foodphotos\Butter-Chicken.jpg" style="width:100%">
+                        <div class="text-box">
+                            <p>Butter Chicken</p></a>
+                          </div>
+                    </div>
+                    <div class="mySlides fade">
+                        <a href="food-single.html"><img src="foodphotos\Chana-Masala.jpg" style="width:100%">
+                        <div class="text-box">
+                            <p>Chana Masala</p></a>
+                          </div>
+                    </div>
+                    <div class="mySlides fade">
+                        <a href="food-single.html"><img src="foodphotos\Green-Lentil-Dahl.webp" style="width:100%">
+                        <div class="text-box">
+                            <p>Green Lentil Dahl</p></a>
+                          </div>
+                      </div>
+                      <!--<br>
+                    <div style="text-align:center">
+                        <span class="dot"></span> 
+                        <span class="dot"></span> 
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                    </div>-->
+                </div>
             </div>
+            
         </section>
 
         <footer class="footer">
@@ -107,7 +150,7 @@
                     <div class="col-lg-8 offset-lg-2">
                         <div class="widget">
                             <div class="footer-text text-center">
-                                <a href="index.html"><img src="foodphotos\Papa-Theo-Logo.png" alt="" class="img-fluid"></a>
+                                <a href="food-contact.html"><img src="foodphotos\Papa-Theo-Logo.png" alt="" class="img-fluid"></a>
                                 <p>© 2023 RecipeList Pty Ltd. Trademarks and brands are the property<br>of their respective owners. </p>
                                 <div class="social">
                                     <a href="#" data-toggle="tooltip" data-placement="bottom" title="Youtube"><i class="fa fa-youtube-square"></i></a>
